# 2025_mud

./: CMakeLists.txt  DrawBasic.cpp  DrawBasic.h  DrawBox.h  Fight.h  Game.h  Inventory.cpp  Inventory.h  Item.h  MainShell.h  Map.cpp  Map.h  Person.h  Person使用指南.md  README.md  Skill.h  StorySystem.cpp  StorySystem.h  Task.h  bag.cpp  bag.h  byte_compat.h  byte_fix.hpp  items.json  json_wrapper.hpp  main.cpp  player.json  剧情系统使用指南.md  剧情系统调试指南.md  框架.md
Person_Skill_Class/: Person.cpp  Person.h  Person使用指南.md  Skill.cpp  Skill.h  json.hpp  monster.h  monster.json
bag/: Game.cpp  Inventory.cpp  Item.h  bag.cpp  bag.h  items.json  main.cpp  player.json
map/: chapters.json  event.json  load.cpp  main.cpp  map.cpp  map.h  map_read.md
new_bag/: Inventory.cpp  Inventory.h  Item.cpp  Item.h  bag.cpp  bag.h  items.json
static/: player.json  剧情初稿.docx
